# api_gateway

./: .env  Cargo.toml  Dockerfile  build.rs  generate_docker.sh  run.sh  start_docker.sh  stop_docker.sh
kafka/: server.properties
src/: app_state.rs  helpers.rs  main.rs  messenger.rs
src/helpers/: email_helper.rs
src/messenger/: grpc.rs  messenger.rs
src/microservices/: user.rs
src/server/: handlers.rs  routes.rs
zookeeper/: zoo.cfg
