[package]
name = "social_media"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
dotenvy = "0.15.1"
serde_with = { version = "2.0.0", features = ["time_0_3"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
tracing = "0.1.40"
tracing-subscriber = "0.3"
validator = { version = "0.16.0", features = ["derive"] }
regex = "1.10.5"
once_cell = "1.13.0"
async-trait = "0.1.80"
tokio = { version = "1.33", features = ["full","rt-multi-thread"] }
tokio-stream = "0.1.15"
tonic = "0.12"
prost = "0.13"
diesel = { version = "2.2.0", features = ["postgres"] }
lapin = "2.4.0"
prost-types = "0.13.1"
[build-dependencies]
tonic-build = "0.12"